# BarnesHut

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: BarnesHut.hpp  BarnesHutAlgorithm.hpp  Body.hpp  Cell.hpp  DataPoint.hpp  EulerIntegrator.hpp  ForceCalculator.hpp  GeneralParameters.hpp  InputHandler.hpp  Integrator.hpp  NaiveAlgorithm.hpp  Node.hpp  RenderTargets.hpp  Simulation.hpp  Units.hpp  Vector2D.hpp  VerletIntegrator.hpp  Widgets.hpp  Writer.hpp  gui.hpp
src/: BarnesHut.cpp  BarnesHutAlgorithm.cpp  Body.cpp  ForceCalculator.cpp  InputHandler.cpp  Integrator.cpp  NaiveAlgorithm.cpp  RenderTargets.cpp  Simulation.cpp  Units.cpp  Widgets.cpp  Writer.cpp  gui.cpp  main.cpp
test/: CMakeLists.txt  testBarnesHut.cpp  testRenderTargets.cpp  testTextInput.cpp  testgui.cpp
